tests/paczka1/small_fuzzy/99262615.err
Error in line 1: 1mhik S119 38,5
Error in line 3: goCO5 S119 28,1
